fixed chart overflowing, style font color and size and remove legend

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,12 +11,14 @@
   max-height: 500px;
   display: flex;
   justify-content: center;
-  padding-bottom: 5%;
+  bottom: 0;
+  position: absolute;
+  padding-bottom: 2%;
   /* overflow: auto; */
 }
 
 canvas {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
 }
